2009-01-06  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_reset),
	(gst_matroska_mux_handle_sink_event), (gst_matroska_mux_finish):
	* gst/matroska/matroska-mux.h:
	Remove internal taglist and fully use tagsetter interface.

2009-01-06  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/avi/gstavimux.c: (gst_avi_mux_reset),
	(gst_avi_mux_riff_get_avi_header):
	* gst/avi/gstavimux.h:
	Ensure header size invariance during subsequent rewrite by using
	tags snapshot.

2009-01-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/pulse/pulsesink.c: (gst_pulsesink_destroy_stream):
	Don't wait for the pulse mainloop when destroying the stream.
	Fixes a deadlock when the pulsedaemon goes away while pulsesink
	is PLAYING. Fixes bug #556986.

2009-01-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Sascha Hauer <s dot hauer at pengutronix dot de>
	          Luotao Fu <l dot fu at pengutronix dot de>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_structure),
	(gst_v4l2_get_caps_info):
	Add support for grayscale v4l2 devices. Fixes bug #566616.

2009-01-05  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (qtdemux_tag_add_str),
	(qtdemux_tag_add_tmpo), (qtdemux_tag_add_covr),
	(qtdemux_tag_add_date), (qtdemux_tag_add_gnre),
	(qtdemux_tag_add_blob), (qtdemux_parse_udta):
	* gst/qtdemux/qtdemux.h:
	* gst/qtdemux/quicktime.c: (plugin_init):
	Streamline tag handling and pass unparsed tags as binary blob
	in private tag.

2009-01-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/audiofx/Makefile.am:
	* gst/audiofx/audiofxbaseiirfilter.c:
	(gst_audio_fx_base_iir_filter_base_init),
	(gst_audio_fx_base_iir_filter_dispose),
	(gst_audio_fx_base_iir_filter_class_init),
	(gst_audio_fx_base_iir_filter_init),
	(gst_audio_fx_base_iir_filter_calculate_gain),
	(gst_audio_fx_base_iir_filter_set_coefficients),